# Todoapp-rust-htmx

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  sqlite.db
assets/js/: alpine.js
backend/: Cargo.toml  sqlite.db
backend/migrations/: 20250218154113_todos.sql  20250218162056_change_todo_id_type.sql
backend/src/: main.rs
backend/src/domain/: todo.rs
src/: api.rs  main.rs  presentation.rs  repositories.rs
src/api/: configure.rs  todo.rs
src/controllers/: todo.rs
src/domain/: todo.rs
src/presentation/: components.rs
src/repositories/: repo_todos.rs
startup/: Cargo.toml  sqlite.db  sqlite.db-shm  sqlite.db-wal
startup/src/: main.rs
styles/: output.css
templates/components/: Todo.html  TodoList.html
templates/pages/: Hello.html  Index.html  hello.html
