[package]
name = "startup"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tower-livereload = "0.9.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

backend = { path = "../backend" }
